<resources>
    <string name="app_name">Task Manager</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_have_an_acc">Have an account?</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_dont_have_acc">Don\'t have an account?</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_login_to_you_acc">Login to your account</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="log_out">Log out</string>
    <string name="add">Add</string>

    <string name="web_client_id">Add</string>
    <string name="text_enter_task_name">Enter Task Name</string>
    <string name="text_enter_description">Enter Description</string>
    <string name="text_pic_date">Pic Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>