<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.matrix_maeny.taskmanager.viewmodels.TaskCreationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_task_manager_bg"
        tools:context=".ui.home.TaskCreationActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1D2022"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:onClick="@{viewModel::onClickPicDate}"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#212527"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <EditText
                    android:id="@+id/editTextTextPersonName5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#BCBCBC"
                    android:ems="10"
                    android:hint="@string/text_enter_task_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:text="@={viewModel.taskName}"
                    android:textColor="#E4E4E4"
                    android:textColorHint="#9A9A9A"
                    android:textSize="20sp"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#212527"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:text="@{viewModel.taskDate,default=`Select Date`}"
                        android:textColor="#E4E4E4"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/pic_date_btn_bg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{viewModel::onClickPicDate}"
                        android:text="@string/text_pic_date"
                        android:textAllCaps="false"
                        android:textColor="#D8D8D8"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#212527"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#BCBCBC"
                    android:ems="10"
                    android:hint="@string/text_enter_description"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:text="@={viewModel.taskDetails}"
                    android:textColor="#E4E4E4"
                    android:textColorHint="#9A9A9A"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

